--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "axios": "^0.26.1",
+    "bootstrap": "^4.6.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "mongoose": "^6.2.4"
+    "jquery": "^3.6.0",
+    "mongoose": "^6.2.4",
+    "popper.js": "^1.16.1",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
